test/error/macro_arg_bad_name.sv
// pattern: invalid macro definition argument: "#"
`define MACRO(#)
